# oxeo-water

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
api/: Dockerfile  README.md  cloudbuild.yaml  requirements.txt
api/app/: data.py  main.py  models.py
data/: README.md
notebooks/: Baseline Metrics.ipynb  CNN Weak Labels.ipynb  Calculate Tile Stats.ipynb  Cloud Masks.ipynb  Dask Predictor.ipynb  Dataloader with IterableTileDataset.ipynb  Dataloader with Sampler.ipynb  FLAML Multiple Models.ipynb  Graph.ipynb  LK-dask-ndvi.ipynb  Neptune Graph DB.ipynb  Neptune Graph and Timestream DBs.ipynb  Pekel Inference.ipynb  Pytorch with Virtual Xarray Dataset.ipynb  README.md  Soil Moisture and NDVI.ipynb  Soil Moisture.ipynb  Stackstac AOI.ipynb  TestSuite.ipynb  TileTestSuite.ipynb  Timeseries Prototyping.ipynb  ToA Landsat Pekel.ipynb  Unet Predictor.ipynb  XGBoost NDVI 1 AgArea-1 Model.ipynb  XGBoost NDVI 1 AgArea.ipynb  XGBoost NDVI 7 Models.ipynb  XGBoost NDVI Forecast.ipynb  all-to-stac.ipynb  sentinel-1-to-stac.ipynb
oxeo/core/: constants.py  logging.py  utils.py
oxeo/core/data/: __init__.py  data.py
oxeo/core/models/: data.py  graph.py  tile.py  timeseries.py  waterbody.py
oxeo/core/stac/: ang_metadata.py  assets.py  bands.py  constants.py  landsat.py  metadata_links.py  mtl_metadata.py  product_metadata.py  properties.py  sentinel1.py  utils.py
oxeo/core/stac/fragments/: __init__.py
oxeo/core/tests/: test_models.py
oxeo/core/tests/models/: data.py  test_tile.py  test_timeseries.py  victoria_tsm.pickle
oxeo/satools/io/: __init__.py  io.py
oxeo/satools/processing/: __init__.py  mtl_parser.py  processing.py
oxeo/utils/: logging.py
oxeo/water/: main.py  run.py  train.py
oxeo/water/callbacks/: wandb_callbacks.py
oxeo/water/configs/: config.yaml
oxeo/water/configs/callbacks/: default.yaml  wandb.yaml
oxeo/water/configs/datamodule/: tile_datamodule.yaml
oxeo/water/configs/experiment/: deeplab_semseg_all_tiles.yaml  deeplab_semseg_hl_tiles.yaml  unet_semseg.yaml  unet_semseg_all_tiles.yaml  unet_semseg_all_tiles_ft.yaml
oxeo/water/configs/logger/: wandb.yaml
oxeo/water/configs/model/: semseg_model.yaml
oxeo/water/configs/trainer/: default.yaml
oxeo/water/datamodules/: __init__.py  constants.py  constellation_datamodule.py  segmentation_datamodule.py  tile_datamodule.py  transforms.py  utils.py
oxeo/water/datamodules/datasets/: __init__.py  iterable_tile_dataset.py  iterable_virtual_dataset.py  segmentation_dataset.py  tile_dataset.py  union_dataset.py  utils.py  virtual_dataset.py
oxeo/water/datamodules/samplers/: __init__.py  samplers.py
oxeo/water/metrics/: __init__.py  area_reduction.py  metrics.py
oxeo/water/models/: __init__.py  base.py  factory.py  tile_utils.py  utils.py  waterbody_predictor.py
oxeo/water/models/cloud_mask/: __init__.py  cloud_mask.py
oxeo/water/models/hollstein/: hollstein.py
oxeo/water/models/ndvi/: __init__.py  ndvi.py
oxeo/water/models/pekel/: __init__.py  masks.py  pekel.py  utils.py
oxeo/water/models/segmentation/: __init__.py  segmentation_2d.py
oxeo/water/testsuite/: testsuite.py
oxeo/water/training_scripts/: train_unet.py
oxeo/water/utils/: __init__.py  utils.py
tests/: test_main.py  test_metrics.py
(+3 files in other folders)
