# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = oxeo-water
version = attr: oxeo.water.__version__

[options]
install_requires =
    numpy
    hydra-core
    attrs
    scikit-image
    rasterio
    satextractor @ git+ssh://git@github.com/FrontierDevelopmentLab/sat-extractor.git

[options.extras_require]
dev =
    pre-commit
    black
    pytest
    mypy
    tox

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:oxeo}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = ox.water
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
