# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = oxeo-water
version = attr: oxeo.water.__version__

[options]
packages = find_namespace:
install_requires =
    dask
    numpy
    hydra-core
    attrs
    scikit-image
    rasterio
    xarray
    satextractor @ git+ssh://git@github.com/oxfordeo/sat-extractor.git
    attr
    pandas
    s2cloudless
    pymasker
    torch
    torchvision
    pytorch_lightning
    lightning-bolts
    wandb
    rich
    python-dotenv
    hydra_colorlog
    kornia
    psycopg2
    SQLAlchemy

[options.packages.find]
include = oxeo.*

[options.extras_require]
all =
    %(ml)s
    %(dev)s
ml =
    pytorch_lightning
    lightning-bolts
    wandb
    rich
    python-dotenv
    hydra_colorlog
    kornia
dev =
    pre-commit
    black
    pytest
    mypy
    tox

[options.entry_points]
console_scripts =
    oxeowater = oxeo.water.main:run_model

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:oxeo}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = oxeo
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
